# xmonad-duplode

./: .gitignore  LICENSE  README.md  Xresources  build  cabal.project  xinitrc  xmobarrc  xmonad-duplode.cabal  xmonad.hs
